--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -8,11 +8,7 @@ WORKDIR /repo/src/build
 RUN cmake ..
 RUN make -j8
 
-RUN mkdir -p /deps
-RUN ldd /repo/src/build/core/argos3 | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
-
 FROM ubuntu:22.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/src/build/core/argos3 /repo/src/build/core/argos3
+COPY --from=builder /repo/src/build/core/argos3 /
+COPY --from=builder /repo/src/build/core/libargos3core_simulator.so /deps/
 ENV LD_LIBRARY_PATH=/deps
